--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "check": "biome check ./src",
+    "check:fix": "biome check --write ./src",
+    "format": "biome format ./src",
+    "format:fix": "biome format --write ./src",
+    "lint": "biome lint ./src",
+    "lint:fix": "biome lint --write ./src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "dev-tools": "^0.1.6"
-  },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
+    "dev-tools": "workspace:*",
     "typescript": "^5.5.3"
   }
 }
