--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -9,14 +9,18 @@
     "format": "biome format ./src",
     "format:fix": "biome format --write ./src",
     "lint": "biome lint ./src",
-    "lint:fix": "biome lint --write ./src"
+    "lint:fix": "biome lint --write ./src",
+    "test": "jest ./src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
+    "@types/jest": "^29.5.12",
     "dev-tools": "workspace:*",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.4",
     "typescript": "^5.5.3"
   }
 }
