--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -15,6 +15,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "axios": "^1.7.3",
+    "domain": "workspace:*"
+  },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
     "@types/jest": "^29.5.12",
