--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -17,7 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.3",
-    "domain": "workspace:*"
+    "domain": "workspace:*",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
