--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "domain",
+  "name": "@front-coding-exam/domain",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
     "@types/jest": "^29.5.12",
-    "dev-tools": "workspace:*",
+    "@front-coding-exam/dev-tools": "workspace:*",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.4",
     "typescript": "^5.5.3"
