--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -18,10 +18,13 @@
   "license": "ISC",
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
-    "@types/jest": "^29.5.12",
     "@front-coding-exam/dev-tools": "workspace:*",
+    "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.4",
     "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "neverthrow": "^7.0.0"
   }
 }
