chore: 不本意ながらルートパッケージで全体のテストを通せるように設定。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,6 @@
     "quickfix.biome": "explicit",
     "source.organizeImports.biome": "explicit"
   },
-  "jest.jestCommandLine": "pnpm -r test --"
+  "jest.jestCommandLine": "pnpm test --",
+  "jest.runMode": "on-demand"
 }
