--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "prepare": "husky install",
     "dev-tool": "pnpm --filter dev-tool",
     "domain": "pnpm --filter domain",
-    "infra": "pnpm --filter infra"
+    "infra": "pnpm --filter infra",
+    "test": "jest ./packages"
   },
   "devDependencies": {
-    "@front-coding-exam/dev-tools": "workspace:*",
     "@biomejs/biome": "^1.8.3",
     "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@front-coding-exam/dev-tools": "workspace:*",
+    "@types/jest": "^29.5.12",
     "husky": "^8.0.0",
-    "lint-staged": "^15.2.8"
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.8",
+    "ts-jest": "^29.2.4",
+    "typescript": "^5.5.3"
   }
 }
