fix: 実行するパッケージにかかわらず依存パッケージはすべてインストールするように変更

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,7 +53,7 @@ jobs:
           cache: pnpm
 
       - name: Install dependencies
-        run: pnpm ${{ matrix.package }} install
+        run: pnpm install
 
       - name: Formatter and Linter
         run: pnpm ${{ matrix.package }} check
