chore: drawio の拡張追加

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-  "recommendations": ["biomejs.biome", "orta.vscode-jest"]
+  "recommendations": [
+    "biomejs.biome",
+    "orta.vscode-jest",
+    "hediet.vscode-drawio"
+  ]
 }
