--- a/.github/workflows/dummy-ci.yaml
+++ b/.github/workflows/dummy-ci.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        package: [dev-tools, domain, infra]
+        package: [dev-tools, domain, infra, app]
     steps:
       - name: Checkout
         run: echo 'dummy job was success'
