--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@front-coding-exam/domain": "workspace:*",
     "axios": "^1.7.4",
+    "axios-rate-limit": "^1.4.0",
     "neverthrow": "^7.0.0",
     "zod": "^3.23.8"
   },
