--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,7 +13,9 @@
     "test": "jest ./src",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "next": "14.2.5",
@@ -22,10 +24,15 @@
   },
   "devDependencies": {
     "@front-coding-exam/dev-tools": "workspace:*",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/nextjs": "^8.2.9",
+    "@storybook/react": "^8.2.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "jest": "^29.7.0",
+    "storybook": "^8.2.9",
     "typescript": "^5"
   }
 }
