--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@vanilla-extract/css": "^1.15.3",
+    "@vanilla-extract/next-plugin": "^2.4.3",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
@@ -31,8 +33,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vanilla-extract/webpack-plugin": "^2.3.11",
     "jest": "^29.7.0",
     "storybook": "^8.2.9",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-merge": "^6.0.1"
   }
 }
