--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,7 +15,8 @@
     "build": "next build",
     "start": "next start",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "scaffdog": "scaffdog generate"
   },
   "dependencies": {
     "@vanilla-extract/css": "^1.15.3",
@@ -35,6 +36,7 @@
     "@types/react-dom": "^18",
     "@vanilla-extract/webpack-plugin": "^2.3.11",
     "jest": "^29.7.0",
+    "scaffdog": "^4.0.0",
     "storybook": "^8.2.9",
     "typescript": "^5",
     "webpack-merge": "^6.0.1"
