--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -31,11 +31,16 @@
     "@storybook/addon-links": "^8.2.9",
     "@storybook/nextjs": "^8.2.9",
     "@storybook/react": "^8.2.9",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vanilla-extract/webpack-plugin": "^2.3.11",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "scaffdog": "^4.0.0",
     "storybook": "^8.2.9",
     "typescript": "^5",
